--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,33 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.20)
 project(DA2025_PRJ1_T13_G07)
 
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_BUILD_TYPE_TMP "${CMAKE_BUILD_TYPE}")
-set(CMAKE_BUILD_TYPE "Release")
-include_directories(TP4)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set( CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE_TMP} )
+# find all source and header files automatically
+file(GLOB_RECURSE PROJECT_SOURCES "code/*.cpp")
+file(GLOB_RECURSE PROJECT_HEADERS "code/**/*.h")
 
-add_executable(
-    
-)
+add_executable(DA2025_PRJ1_T13_G07 ${PROJECT_SOURCES} ${PROJECT_HEADERS})
 
-target_link_libraries(DA2025_PRJ1_T13_G07)
+# import Doxygen
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+    set(BUILD_DOC_DIR "${CMAKE_SOURCE_DIR}/documentation")
+    if(NOT EXISTS "${BUILD_DOC_DIR}")
+        file(MAKE_DIRECTORY "${BUILD_DOC_DIR}")
+    endif()
+
+    set(DOXYGEN_IN "${CMAKE_SOURCE_DIR}/docs/Doxyfile")
+    set(DOXYGEN_OUT "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
+    configure_file("${DOXYGEN_IN}" "${DOXYGEN_OUT}" @ONLY)
+
+    message("Doxygen build started")
+    add_custom_target(Doxygen ALL
+            COMMAND "${DOXYGEN_EXECUTABLE}" "${DOXYGEN_OUT}"
+            WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+            COMMENT "Generating API documentation with Doxygen"
+            VERBATIM)
+else(DOXYGEN_FOUND)
+    message("Doxygen needs to be installed to generate the documentation.")
+endif(DOXYGEN_FOUND)
